# Geogebra_mcp

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  PLAN_0.md  PLAN_1.md  README.md  auto_launcher.py  geogebra_api.py  geogebra_bridge.js  geogebra_bridge.py  geogebra_daemon.js  geogebra_mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  smithery.yaml  start_geogebra.bat  update.py
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: architecture.mmd
geogebra_mcp/: __init__.py  api.py  auto_launcher.py  doctor.py  geogebra_bridge.js  geogebra_daemon.js  install_wizard.py  package-lock.json  server.py
geogebra_mcp/web/: bundle_manifest.json  index.html  runtime.js  runtime_loader.js
scripts/: setup_geogebra_mcp.py  setup_geogebra_web_bundle.py  smoke_web_runtime.js
skills/geogebra-master/: SKILL.md
skills/geogebra-master/agents/: openai.yaml
skills/geogebra-setup/: SKILL.md
skills/geogebra-setup/agents/: openai.yaml
skills/use-geogebra-mcp/: SKILL.md
skills/use-geogebra-mcp/agents/: openai.yaml
tests/: conftest.py  test_auto_launcher.py  test_daemon_protocol.js  test_doctor.py  test_mcp_server.py  test_packaging.py  test_web_bundle.py
